# src/swagger.json
@@ -1,68 +1,77 @@
 {
-  "openapi":"3.0.0",
-  "info":{
+  "openapi": "3.0.0",
+  "info": {
     "title": "RentalX Documentation",
     "description": "This is an API Rent",
     "version": "1.0.0",
-    "contact":{
-      "email":"douglas.hfonseca@gmail.com"
+    "contact": {
+      "email": "douglas.hfonseca@gmail.com"
     }
   },
-  "paths":{
-    "/categories":{
-      "post":{
-        "tags":["Category"],
-        "summary":"Create a category",
-        "description":"Create a new category",
-        "requestBody":{
-          "content":{
-            "application/json":{
-              "schema":{
-                "type":"object",
-                "properties":{
-                  "name":{
-                    "type":"string"
+  "paths": {
+    "/categories": {
+      "post": {
+        "tags": [
+          "Category"
+        ],
+        "summary": "Create a category",
+        "description": "Create a new category",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
                   },
-                  "description":{
-                    "type":"string"
+                  "description": {
+                    "type": "string"
                   }
                 },
-                "example":{
-                  "name":"Category name sample",
-                  "description":"Category description sample"
+                "example": {
+                  "name": "Category name sample",
+                  "description": "Category description sample"
                 }
               }
             }
           }
         },
-        "responses":{
-          "201":{
-            "description":"Created"
+        "responses": {
+          "201": {
+            "description": "Created"
           },
-          "500":{
-            "description":"Category already exists"
+          "500": {
+            "description": "Category already exists"
           }
         }
       },
-      "get":{
-        "tags":["Category"],
-        "summary":"List all categories",
+      "get": {
+        "tags": [
+          "Category"
+        ],
+        "summary": "List all categories",
         "description": "List all categories",
-        "responses":{
-          "200":{
-            "description":"Success",
-            "content":{
-              "application/json":{
-                "schema":{
-                  "type":"array",
-                  "items":{
-                    "type":"object",
-                    "properties":{
-                      "name":{
-                        "type":"string"
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "name": {
+                        "type": "string"
                       },
-                      "description":{
-                        "type":"string"
+                      "description": {
+                        "type": "string"
                       }
                     }
                   }
@@ -73,68 +82,230 @@
         }
       }
     },
-    "/categories/import":{
-      "post":{
-        "tags":["Category"],
-        "summary":"Upload a new Category",
-        "description":"Upload a new Category",
-        "requestBody":{
-          "content":{
-            "multipart/form-data":{
-              "schema":{
-                "type":"object",
-                "properties":{
-                  "file":{
-                    "type":"string",
-                    "format":"binary"
+    "/categories/import": {
+      "post": {
+        "tags": [
+          "Category"
+        ],
+        "summary": "Upload a new Category",
+        "description": "Upload a new Category",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
                   }
                 }
               }
             }
           }
         },
-        "responses":{
-          "201":{
-            "description":"Created"
+        "responses": {
+          "201": {
+            "description": "Created"
           }
         }
       }
     },
-    "/specifications":{
-      "post":{
-        "tags":["Specifications"],
-        "summary":"Create a Specification",
-        "description":"Create a new specification",
-        "requestBody":{
-          "content":{
-            "application/json":{
-              "schema":{
-                "$ref":"#/definitions/Specification"
+    "/specifications": {
+      "post": {
+        "tags": [
+          "Specifications"
+        ],
+        "summary": "Create a Specification",
+        "description": "Create a new specification",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specification"
               }
             }
           }
         },
-        "responses":{
-          "201":{
-           "description":"Created" 
+        "responses": {
+          "201": {
+            "description": "Created"
           },
-          "500":{
-            "description":"Specification already exists!"
+          "500": {
+            "description": "Specification already exists!"
+          }
+        }
+      }
+    },
+    "/sessions": {
+      "post": {
+        "tags": [
+          "Session"
+        ],
+        "summary": "Authentication user",
+        "description": "Authenticate user",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Email or password incorrect"
+          }
+        }
+      }
+    },
+    "/cars": {
+      "post": {
+        "tags": [
+          "Cars"
+        ],
+        "summary": "Create a new car",
+        "description": "Create a new car",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Car"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Car already exists"
+          }
+        }
+      }
+    },
+    "/cars/images/{id}": {
+      "post": {
+        "tags": [
+          "Cars"
+        ],
+        "summary": "Upload images",
+        "description": "Upload Images",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Car id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "images": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
           }
         }
       }
     }
   },
-  "definitions":{
-    "Specification":{
-      "type":"object",
-      "properties":{
-        "name":{
-          "type":"string"
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
         },
-        "description":{
-          "type":"string"
+        "description": {
+          "type": "string"
         }
+      }
+    },
+    "Car": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "daily_rate": {
+          "type": "string"
+        },
+        "license_plate": {
+          "type": "string"
+        },
+        "fine_amount": {
+          "type": "number"
+        },
+        "brand": {
+          "type": "string"
+        },
+        "category_id": {
+          "type": "string"
+        }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
